@@ -1,0 +1,57 @@
+[[native-images-support]]
+=== Native Images Support
+
+Starting with version 6.0, the GraalVM compilation to native images of Spring Integration applications is supported by https://docs.spring.io/spring-framework/docs/current/reference/html/core.html#aot[Spring AOT] native hints.
+For most common use-cases, like endpoint definitions with `@Bean` methods, Java DSL configuration with lambdas and `@MessagingGateway` interfaces scanning(importing), the framework works as is or provides respective reflection, proxy and serialization hints.
+If configuration is done via messaging annotations (`@ServiceActivator`, `@Splitter` etc.) on POJO methods, or POJO methods are used for `IntegrationFlowBuilder.handle(Object service, String methodName)` API, they have to be also marked with a `@Reflective` annotation since they are invoked by the framework reflectively.
+
+IMPORTANT: The XML configuration is not supported in native images.
+
+As stated before service interfaces with the `@MessagingGateway` annotation when they are scanned by the `@IntegrationComponentScan` or used in `@Import` are processed by the framework and respective proxy hint is exposed into AOT contribution.
+When gateways are declared via an `IntegrationFlow.from(Class<?> serviceInterface)` API, the proxy configured for their interfaces have to be exposed manually:
+
+====
+[source,java]
+----
+@Configuration
+@EnableIntegration
+@ImportRuntimeHints(GatewayRuntimeHints.class)
+public class IntegrationConfiguration {
+
+    @Bean
+    IntegrationFlow someFlow() {
+        return IntegrationFlow.from(SomeGateway)
+                  // ...
+                   .get();
+    }
+
+    public interface SomeGateway {
+
+        void doSomething(Object payload);
+
+    }
+
+    private static class GatewayRuntimeHints implements RuntimeHintsRegistrar {
+
+        @Override
+        public void registerHints(RuntimeHints hints, ClassLoader classLoader) {
+            hints.proxies().registerJdkProxy(
+                                   AopProxyUtils.completeJdkProxyInterfaces(SomeGateway));
+        }
+
+    }
+
+}
+----
+====
+
+NOTE: The `IntegrationFlow` content is not processed during AOT phase at the moment.
+Therefore, some hints, like mentioned above for gateway proxy, must be provided by target application.
+
+Of course, configuration is just a piece of an integration solution.
+The most important part is a data transferring over the network and persistent storage.
+That's where serialization comes handy for most use-cases.
+Spring Integration exposes serialization hints into a native image configuration for these types used by the framework internally: `String`, `Number`, `Long`, `Date`, `ArrayList`, `HashMap`, `Properties`, `Hashtable`, `Exception`, `UUID`, `GenericMessage`, `ErrorMessage`, `MessageHeaders`, `AdviceMessage`, `MutableMessage`, `MutableMessageHeaders`, `MessageGroupMetadata`, `MessageHolder`, `MessageMetadata`, `MessageHistory`, `MessageHistory.Entry`, `DelayHandler.DelayedMessageWrapper`.
+For use-specific data, mostly present as a message payload, the serialization hint must be exposed manually via `RuntimeHintsRegistrar` implementation, as it show above for gateway proxy, and respective `RuntimeHints.serialization().registerType()` API.
+
+NOTE: It is recommended to develop native integration applications with Spring Boot and use its respective build tools.
